# PCSD_Project

./: .gitignore  predictive_maintenance.m
Pc_core_proj/: .gitignore  CMakeLists.txt  README.md
Pc_core_proj/include/: CsvParser.hpp  FileWatcher.hpp  LogMonitorApp.hpp  Sample.hpp  SerialOutputPrinter.hpp
Pc_core_proj/src/: CsvParser.cpp  FileWatcher.cpp  LogMonitorApp.cpp  SerialOutputPrinter.cpp  main.cpp
stm32_proj/: README.md  platformio.ini
stm32_proj/include/: accelerometer_module.h  board_support.h  data_logger.h  serial_vcp.h
stm32_proj/src/: accelerometer_module.cpp  board_support.cpp  data_logger.cpp  main.cpp  serial_vcp.cpp  stm32cube_bsp_accelero.c  stm32cube_bsp_board.c  stm32cube_bsp_lsm6dsl.c
ttgo/: platformio.ini
ttgo/include/: User_Setup.h
ttgo/src/: main.cpp
